<resources>
    <string name="app_name">Dahlan Firdaus</string>
    <string name="temail">Email</string>
    <string name="tpassword">Password</string>
    <string name="btnlogin">LOGIN</string>
    <string name="tData">LOGIN</string>
    <string name="txEmail">Email</string>
    <string name="txpassword">Password</string>
    <string name="label12">LOGIN</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="idaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <color name="abu_abu">#9ca3ce</color>
</resources>